--- a/OOP_Concepts_2.ipynb
+++ b/OOP_Concepts_2.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "OOP Concepts 2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPK+2wIESxb1ZIQYpMRGpfA",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPgHQJnPdI6ViHHxnWjRW+L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -417,10 +418,57 @@
     {
       "cell_type": "code",
       "source": [
+        "class Person:\n",
+        "  def __init__(self,name):\n",
+        "    self.name=name\n",
+        "  def codename(self):\n",
+        "    print(self.name)\n",
+        "  \n",
+        "std1= Person(\"Student 1\")\n",
+        "std1.codename()\n",
+        "\n",
+        "class Person(Person):\n",
+        "  pass\n",
+        "\n",
+        "std2= Person(\"Student 2\")\n",
+        "std2.codename()\n",
+        "\n",
+        "class Person3(Person):\n",
+        "  pass\n",
+        "\n",
+        "std3= Person(\"Student 3\")\n",
+        "std3.codename()\n",
+        "\n",
+        "class Grade:\n",
+        "  def init"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6jQUEk-ncUMk",
+        "outputId": "7850c34a-34e1-4154-91a0-5d3c7e745fd6"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Student 1\n",
+            "Student 2\n",
+            "Student 3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "3mkpZeCyY_It"
+        "id": "v_pC373RcUJN"
       },
       "execution_count": null,
       "outputs": []
