--- a/OOP_Concepts_2.ipynb
+++ b/OOP_Concepts_2.ipynb
@@ -6,7 +6,7 @@
       "name": "OOP Concepts 2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPgHQJnPdI6ViHHxnWjRW+L",
+      "authorship_tag": "ABX9TyM6UVpt2Sl7hD1wkJ0Edvh4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -406,7 +406,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. Create a Python program that displays the name of three students (Student 1, Student 2, and Student 2) and their term grades\n",
+        "1. Create a Python program that displays the name of three students (Student 1, Student 2, and Student 3) and their term grades\n",
         "2. Create a class name Person and attributes - std1, std2, pre,mid,fin\n",
         "3. Compute the average of each term grade using Grade() method\n",
         "Information about student's grades must be hidden from others"
@@ -420,36 +420,35 @@
       "source": [
         "class Person:\n",
         "  def __init__(self,name):\n",
-        "    self.name=name\n",
+        "    self.name = name\n",
+        "    \n",
+        "\n",
         "  def codename(self):\n",
         "    print(self.name)\n",
         "  \n",
-        "std1= Person(\"Student 1\")\n",
-        "std1.codename()\n",
+        "person1 = Person(\"Student 1\")\n",
+        "person1.codename()\n",
         "\n",
-        "class Person(Person):\n",
+        "class Student2(Person):\n",
         "  pass\n",
         "\n",
-        "std2= Person(\"Student 2\")\n",
-        "std2.codename()\n",
+        "person2= Person(\"Student 2\")\n",
+        "person2.codename()\n",
         "\n",
-        "class Person3(Person):\n",
+        "class Student3(Person):\n",
         "  pass\n",
         "\n",
-        "std3= Person(\"Student 3\")\n",
-        "std3.codename()\n",
-        "\n",
-        "class Grade:\n",
-        "  def init"
+        "person3= Person(\"Student 3\")\n",
+        "person3.codename()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "6jQUEk-ncUMk",
-        "outputId": "7850c34a-34e1-4154-91a0-5d3c7e745fd6"
+        "id": "QGjkKl_eoj07",
+        "outputId": "90b1da29-6796-4b91-a7b6-6db32721f1f0"
       },
-      "execution_count": 52,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,17 +460,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "v_pC373RcUJN"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
