--- a/OOP_Concepts_2.ipynb
+++ b/OOP_Concepts_2.ipynb
@@ -6,7 +6,7 @@
       "name": "OOP Concepts 2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM6UVpt2Sl7hD1wkJ0Edvh4",
+      "authorship_tag": "ABX9TyOS+VVUEH/5fFHK3DTyX1/8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -421,42 +421,62 @@
         "class Person:\n",
         "  def __init__(self,name):\n",
         "    self.name = name\n",
-        "    \n",
-        "\n",
         "  def codename(self):\n",
         "    print(self.name)\n",
+        "\n",
+        "class Grades:\n",
+        "  def __init__ (self,name, pre,mid,fin):\n",
+        "    self.name=name\n",
+        "    self.pre=pre\n",
+        "    self.mid=mid\n",
+        "    self.fin=fin\n",
+        "  def term_grades(self):\n",
+        "    print(f\"{self.name} has a Term Grades of: Prelim:\" f\" {self.pre};\" \" Midterm:\" f\" {self.mid};\" \" Final:\" f\" {self.fin}.\")\n",
+        "\n",
         "  \n",
-        "person1 = Person(\"Student 1\")\n",
-        "person1.codename()\n",
+        "std1 = Person(\"Student 1\")\n",
+        "std1.codename()\n",
+        "\n",
+        "std1=Grades(\"Student 1\",87,83,94 )\n",
+        "std1.term_grades()\n",
         "\n",
         "class Student2(Person):\n",
         "  pass\n",
         "\n",
-        "person2= Person(\"Student 2\")\n",
-        "person2.codename()\n",
+        "std2= Person(\"Student 2\")\n",
+        "std2.codename()\n",
+        "\n",
+        "std2=Grades(\"Student 2\",67,74,83)\n",
+        "std2.term_grades()\n",
         "\n",
         "class Student3(Person):\n",
         "  pass\n",
         "\n",
-        "person3= Person(\"Student 3\")\n",
-        "person3.codename()"
+        "std3= Person(\"Student 3\")\n",
+        "std3.codename()\n",
+        "\n",
+        "std3=Grades(\"Student 3\",82, 75, 73)\n",
+        "std3.term_grades()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "QGjkKl_eoj07",
-        "outputId": "90b1da29-6796-4b91-a7b6-6db32721f1f0"
+        "id": "sgWUWyo4ew8N",
+        "outputId": "5b219c8a-2fb6-466a-c551-f381976236f4"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Student 1\n",
+            "Student 1 has a Term Grades of: Prelim: 87; Midterm: 83; Final: 94.\n",
             "Student 2\n",
-            "Student 3\n"
+            "Student 2 has a Term Grades of: Prelim: 67; Midterm: 74; Final: 83.\n",
+            "Student 3\n",
+            "Student 3 has a Term Grades of: Prelim: 82; Midterm: 75; Final: 73.\n"
           ]
         }
       ]
