--- a/OOP_Concepts_2.ipynb
+++ b/OOP_Concepts_2.ipynb
@@ -6,7 +6,7 @@
       "name": "OOP Concepts 2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOS+VVUEH/5fFHK3DTyX1/8",
+      "authorship_tag": "ABX9TyO0J2zn5XmBO606VppH844x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -418,65 +418,75 @@
     {
       "cell_type": "code",
       "source": [
-        "class Person:\n",
+        "class Student_Name:\n",
         "  def __init__(self,name):\n",
-        "    self.name = name\n",
+        "    self.__name = name\n",
         "  def codename(self):\n",
-        "    print(self.name)\n",
+        "    print(self.__name)\n",
         "\n",
-        "class Grades:\n",
-        "  def __init__ (self,name, pre,mid,fin):\n",
-        "    self.name=name\n",
-        "    self.pre=pre\n",
-        "    self.mid=mid\n",
-        "    self.fin=fin\n",
-        "  def term_grades(self):\n",
-        "    print(f\"{self.name} has a Term Grades of: Prelim:\" f\" {self.pre};\" \" Midterm:\" f\" {self.mid};\" \" Final:\" f\" {self.fin}.\")\n",
+        "class Term_Grade:\n",
+        "  def __init__(self, pre, mid, fin):\n",
+        "    self.__pre = prelim\n",
+        "    self.__mid = midterm\n",
+        "    self.__fin = finals\n",
+        "  def Average_Grade(self):\n",
+        "     print(self.__pre + self.__mid + self.__fin)\n",
         "\n",
-        "  \n",
-        "std1 = Person(\"Student 1\")\n",
+        "std1 = Student_Name(\"Student 1\")\n",
         "std1.codename()\n",
         "\n",
-        "std1=Grades(\"Student 1\",87,83,94 )\n",
-        "std1.term_grades()\n",
+        "pre1= int(input(\"Prelim Grade:\"))\n",
+        "mid1= int(input(\"Midterm Grade:\"))\n",
+        "fin1= int(input(\"Finals Grade:\"))\n",
+        "std1_average= (pre1 + mid1 + fin1)/3\n",
+        "print(\"Average:\", std1_average)\n",
         "\n",
-        "class Student2(Person):\n",
-        "  pass\n",
-        "\n",
-        "std2= Person(\"Student 2\")\n",
+        "std2= Student_Name(\"Student 2\")\n",
         "std2.codename()\n",
         "\n",
-        "std2=Grades(\"Student 2\",67,74,83)\n",
-        "std2.term_grades()\n",
+        "pre2= int(input(\"Prelim Grade:\"))\n",
+        "mid2= int(input(\"Midterm Grade:\"))\n",
+        "fin2= int(input(\"Finals Grade:\"))\n",
+        "std2_average= (pre1 + mid1 + fin1)/3\n",
+        "print(\"Average:\", std2_average)\n",
         "\n",
-        "class Student3(Person):\n",
-        "  pass\n",
-        "\n",
-        "std3= Person(\"Student 3\")\n",
+        "std3= Student_Name(\"Student 3\")\n",
         "std3.codename()\n",
         "\n",
-        "std3=Grades(\"Student 3\",82, 75, 73)\n",
-        "std3.term_grades()"
+        "pre3= int(input(\"Prelim Grade:\"))\n",
+        "mid3= int(input(\"Midterm Grade:\"))\n",
+        "fin3= int(input(\"Finals Grade:\"))\n",
+        "std3_average= (pre3 + mid3 + fin3)/3\n",
+        "print(\"Average:\", std3_average)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "sgWUWyo4ew8N",
-        "outputId": "5b219c8a-2fb6-466a-c551-f381976236f4"
+        "id": "v2Y0Foeb8jZh",
+        "outputId": "83cb8fd8-3091-45e7-87d6-3d2d9d1217cc"
       },
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Student 1\n",
-            "Student 1 has a Term Grades of: Prelim: 87; Midterm: 83; Final: 94.\n",
+            "Prelim Grade:88\n",
+            "Midterm Grade:93\n",
+            "Finals Grade:93\n",
+            "Average: 91.33333333333333\n",
             "Student 2\n",
-            "Student 2 has a Term Grades of: Prelim: 67; Midterm: 74; Final: 83.\n",
+            "Prelim Grade:83\n",
+            "Midterm Grade:85\n",
+            "Finals Grade:90\n",
+            "Average: 91.33333333333333\n",
             "Student 3\n",
-            "Student 3 has a Term Grades of: Prelim: 82; Midterm: 75; Final: 73.\n"
+            "Prelim Grade:75\n",
+            "Midterm Grade:79\n",
+            "Finals Grade:82\n",
+            "Average: 78.66666666666667\n"
           ]
         }
       ]
