--- a/OOP_Concepts_2.ipynb
+++ b/OOP_Concepts_2.ipynb
@@ -6,7 +6,7 @@
       "name": "OOP Concepts 2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO0J2zn5XmBO606VppH844x",
+      "authorship_tag": "ABX9TyN9GWJp3mVWwVb51aawjbQz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -430,63 +430,63 @@
         "    self.__mid = midterm\n",
         "    self.__fin = finals\n",
         "  def Average_Grade(self):\n",
-        "     print(self.__pre + self.__mid + self.__fin)\n",
+        "     print(self.__pre + self.__mid + self.__fin)/3\n",
         "\n",
         "std1 = Student_Name(\"Student 1\")\n",
         "std1.codename()\n",
         "\n",
-        "pre1= int(input(\"Prelim Grade:\"))\n",
-        "mid1= int(input(\"Midterm Grade:\"))\n",
-        "fin1= int(input(\"Finals Grade:\"))\n",
-        "std1_average= (pre1 + mid1 + fin1)/3\n",
-        "print(\"Average:\", std1_average)\n",
+        "pre1= float(input(\"Prelim Grade:\"))\n",
+        "mid1= float(input(\"Midterm Grade:\"))\n",
+        "fin1= float(input(\"Finals Grade:\"))\n",
+        "std1_input_average= (pre1 + mid1 + fin1)/3\n",
+        "print(\"Average:\", std1_input_average)\n",
         "\n",
         "std2= Student_Name(\"Student 2\")\n",
         "std2.codename()\n",
         "\n",
-        "pre2= int(input(\"Prelim Grade:\"))\n",
-        "mid2= int(input(\"Midterm Grade:\"))\n",
-        "fin2= int(input(\"Finals Grade:\"))\n",
-        "std2_average= (pre1 + mid1 + fin1)/3\n",
-        "print(\"Average:\", std2_average)\n",
+        "pre2= float(input(\"Prelim Grade:\"))\n",
+        "mid2= float(input(\"Midterm Grade:\"))\n",
+        "fin2= float(input(\"Finals Grade:\"))\n",
+        "std2_input_average= (pre1 + mid1 + fin1)/3\n",
+        "print(\"Average:\", std2_input_average)\n",
         "\n",
         "std3= Student_Name(\"Student 3\")\n",
         "std3.codename()\n",
         "\n",
-        "pre3= int(input(\"Prelim Grade:\"))\n",
-        "mid3= int(input(\"Midterm Grade:\"))\n",
-        "fin3= int(input(\"Finals Grade:\"))\n",
-        "std3_average= (pre3 + mid3 + fin3)/3\n",
-        "print(\"Average:\", std3_average)"
+        "pre3= float(input(\"Prelim Grade:\"))\n",
+        "mid3= float(input(\"Midterm Grade:\"))\n",
+        "fin3= float(input(\"Finals Grade:\"))\n",
+        "std3_input_average= (pre3 + mid3 + fin3)/3\n",
+        "print(\"Average:\", std3_input_average)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "v2Y0Foeb8jZh",
-        "outputId": "83cb8fd8-3091-45e7-87d6-3d2d9d1217cc"
+        "outputId": "6f0264c6-9df4-415e-e01d-ecbebc76ee5b"
       },
-      "execution_count": 16,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Student 1\n",
-            "Prelim Grade:88\n",
-            "Midterm Grade:93\n",
-            "Finals Grade:93\n",
-            "Average: 91.33333333333333\n",
+            "Prelim Grade:1.00\n",
+            "Midterm Grade:1.50\n",
+            "Finals Grade:1.25\n",
+            "Average: 1.25\n",
             "Student 2\n",
-            "Prelim Grade:83\n",
-            "Midterm Grade:85\n",
-            "Finals Grade:90\n",
-            "Average: 91.33333333333333\n",
+            "Prelim Grade:2.25\n",
+            "Midterm Grade:1.75\n",
+            "Finals Grade:1.75\n",
+            "Average: 1.25\n",
             "Student 3\n",
-            "Prelim Grade:75\n",
-            "Midterm Grade:79\n",
-            "Finals Grade:82\n",
-            "Average: 78.66666666666667\n"
+            "Prelim Grade:1.50\n",
+            "Midterm Grade:2.00\n",
+            "Finals Grade:1.50\n",
+            "Average: 1.6666666666666667\n"
           ]
         }
       ]
